--- a/src/style.css
+++ b/src/style.css
@@ -98,11 +98,25 @@ button:focus-visible {
 
 /* Mi CSS */
 
-#botonCarta:hover{
-  color: gold;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 10px;
 }
 
-#puntuacion{
-  padding: 10px;
+.fondoCarta{
+  display: flex;
+  justify-content: center;
+  background-color: #ffffffa1;
+  border-radius: 50px;
+}
+
+button:hover{
+  border-radius: 30px;
+}
+
+button {
+  margin: 10px;
+  background-color: #FF6000;
 }
 
